--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,12 +37,6 @@
       </div>
     </div>
 
-    <div
-      style="display: flex; align-items: center; gap: 1em; margin-bottom: 1em"
-    >
-      <button id="open-persona-btn">Edit Persona</button>
-    </div>
-
     <div class="feature-layout">
       <div class="container">
         <div id="doc-panel-wrapper" class="column-wrapper scrollable">
@@ -92,6 +86,16 @@
             />
             <button type="submit" id="submit-button">Send</button>
           </form>
+          <div
+            style="
+              display: flex;
+              align-items: center;
+              gap: 1em;
+              margin-bottom: 1em;
+            "
+          >
+            <button id="open-persona-btn">Edit Persona</button>
+          </div>
           <div id="search-panel-wrapper" class="column-wrapper">
             <button id="toggle-search-btn" title="Minimize Search Results">
               🡸
