--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -96,6 +96,7 @@
           >
             <button id="open-persona-btn">Edit Persona</button>
             <button id="clear-history" type="button">Clear Logs</button>
+            <button id="reset-llm" type="button">Reset LLM</button>
           </div>
           <div id="search-panel-wrapper" class="column-wrapper">
             <button id="toggle-search-btn" title="Minimize Search Results">
