--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,7 +43,11 @@
           <div class="column" id="doc-manager">
             <div class="header-row">
               <h2>Document Library</h2>
-              <button id="toggle-docs-btn" title="Minimize Document Library">
+              <button
+                id="toggle-docs-btn"
+                title="Minimize Document Library"
+                type="button"
+              >
                 «
               </button>
             </div>
