--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/css/style.css" />
     <script type="module" src="/static/js/main.js"></script>
     <script type="module" src="/static/js/marked.min.js"></script>
+    <script type="module" src="/static/js/uploadChat.js"></script>
   </head>
   <body>
     <div class="top-banner">Deployable Knowledge</div>
@@ -102,6 +103,13 @@
             <button id="clear-history" type="button">Clear Logs</button>
             <button id="reset-llm" type="button">Reset LLM</button>
             <button id="download-chat">Download Chat</button>
+            <input
+              type="file"
+              id="upload-chat-file"
+              accept=".html"
+              style="display: none"
+            />
+            <button id="upload-chat-btn" type="button">Upload Chat</button>
           </div>
           <div id="search-panel-wrapper" class="column-wrapper">
             <button id="toggle-search-btn" title="Minimize Search Results">
