--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -75,6 +75,18 @@
           </div>
         </div>
 
+        <div id="log-panel-wrapper" class="column-wrapper scrollable">
+          <div class="column" id="log-manager">
+            <div class="header-row">
+              <h2>Chat Logs</h2>
+              <button id="toggle-logs-btn" title="Minimize Chat Logs" type="button">«</button>
+            </div>
+            <ul id="log-list">
+              <li><em>Loading logs...</em></li>
+            </ul>
+          </div>
+        </div>
+
         <!-- Chat + Search -->
         <div class="column scrollable">
           <h2>Assistant Chat</h2>
