Add new chat button and improve log panel

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -79,6 +79,7 @@
           <div class="column" id="log-manager">
             <div class="header-row">
               <h2>Chat Logs</h2>
+              <button id="new-chat-btn" type="button">New Chat</button>
               <button id="toggle-logs-btn" title="Minimize Chat Logs" type="button">«</button>
             </div>
             <ul id="log-list">
