--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -467,3 +467,17 @@ input:disabled, button:disabled {
   height: auto;
   line-height: 1;
 }
+
+#new-chat-btn {
+  font-size: 0.8rem;
+  padding: 0.25rem 0.5rem;
+  margin-left: auto;
+  width: auto;
+  min-width: unset;
+  height: auto;
+  line-height: 1;
+}
+
+#log-list button.active {
+  font-weight: bold;
+}
